# cacatuidae

./: Cargo.toml  LICENSE  README.md
cac_renderer/: Cargo.toml  README.md
cac_renderer/examples/: hello_triangle.rs
cac_renderer/src/: color.rs  error.rs  frame_timer.rs  generation_vec.rs  lib.rs  math.rs  renderer.rs
cac_renderer/src/backend/: mod.rs
cac_renderer/src/backend/headless/: mod.rs
cac_renderer/src/backend/opengl/: mod.rs
cac_renderer/src/renderer/: buffer.rs  material.rs  mesh.rs  mesh_buffer.rs  mod.rs  render_target.rs  shader.rs  vertex_layout.rs
cac_renderer/src/renderer/backend/: available_backends.rs  mod.rs
cac_renderer/src/renderer/backend/headless/: mesh.rs  mod.rs  render_target.rs
cac_renderer/src/renderer/backend/opengl/: buffer.rs  mesh.rs  mod.rs  render_target.rs  shader.rs  shader_program.rs  vertex_array.rs
