[package]
name = "cac_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# abstraction over all kind of windows
raw-window-handle = "0.4"
# mainly used for defaults for different features or targets
cfg-if = "1.0"
# logging
log = "0.4"



[dev-dependencies]
winit = { version = "0.26", default-features = false, features = ["x11"] }
anyhow = "1.0"

[features] 
default = ["headless", "opengl"]
headless = []
opengl = []
