[package]
name = "cac_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# abstraction over all kind of windows
raw-window-handle = "0.4"
# mainly used for defaults for different features or targets
cfg-if = "1.0"
# logging
log = "0.4"
# math 
glam = "0.21"


gl = { version = "0.14", optional = true }
raw-gl-context = { version = "0.1", optional = true }


[dev-dependencies]
# just some window 
winit = { version = "0.26", default-features = false, features = ["x11"] }
# simple error returns
anyhow = "1.0"
# logger for examples
pretty_env_logger = "0.4"
# image file loading
image = { version =  "0.24", default-features = false, features = ["png"] }


[features] 
default = ["opengl"]
headless = []
opengl = ["gl", "raw-gl-context"]
